--- a/eval/server/planner/callers/models.conf
+++ b/eval/server/planner/callers/models.conf
@@ -6,7 +6,7 @@ MODEL_14b="deepseek-ai/DeepSeek-R1-Distill-Qwen-14B"
 MODEL_8b="deepseek-ai/DeepSeek-R1-Distill-Llama-8B" 
 MODEL_1_5b="deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B"
 
-# Non reasoning models (uncomment to use)
-# MODEL_14b="Qwen/Qwen2.5-14B-Instruct"
-# MODEL_8b="meta-llama/Llama-3.1-8B-Instruct"
-# MODEL_1_5b="Qwen/Qwen2.5-1.5B-Instruct"
+# Direct (non-reasoning) models — uncomment to use for direct runs only
+DIRECT_14b="Qwen/Qwen2.5-14B-Instruct"
+DIRECT_8b="meta-llama/Llama-3.1-8B-Instruct"
+DIRECT_1_5b="Qwen/Qwen2.5-1.5B-Instruct"
