--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,17 +30,21 @@ dependencies = [
     "pyyaml>=6.0",
     "tqdm>=4.64.0",
     "psutil>=5.9.0",
+    "pynvml>=12.0.0",
+    "pandas>=2.3.2"
 ]
 
 [project.optional-dependencies]
 # Server evaluation dependencies
 server = [
-    "vllm>=0.8.0",
+    "vllm==0.10.0",
     "transformers>=4.30.0",
     "datasets>=2.10.0",
     "matplotlib>=3.6.0",
-    "pandas>=1.5.0",
-    "torch>=2.0.0"
+    "pandas>=2.3.2",
+    "torch>=2.0.0",
+    "seaborn>=0.13.2",
+    "absl-py>=2.3.1"
 ]
 
 # Tegra evaluation dependencies
