enable git to track data empty dir

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@ outputs/*
 venv/
 benchmarks/agentic_planner/eval/
 benchmarks/agentic_planner/results/
-data/*/*
+data/*/*/*
+!data/*/
+!data/*/.gitkeep
+!data/README.md
 third_party/token2metrics/
 third_party/token2metrics.egg-info/
 third_party/.git
