--- a/files/models.yaml
+++ b/files/models.yaml
@@ -3,6 +3,9 @@ reasoning_models:
   "DeepSeek-R1-Distill-Qwen-1.5B": "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B"
   "DeepSeek-R1-Distill-Llama-8B": "deepseek-ai/DeepSeek-R1-Distill-Llama-8B"
   "DeepSeek-R1-Distill-Qwen-14B": "deepseek-ai/DeepSeek-R1-Distill-Qwen-14B"
+  "DSR1-8B-llmc-awq-w4": "edge-inference/DSR1-8B-llmc-awq-w4"
+  "DSR1-14B-llmc-awq-w4": "edge-inference/DSR1-14B-llmc-awq-w4"
+  "DSR1-32B-llmc-awq-w4": "edge-inference/DSR1-32B-llmc-awq-w4"
 
 direct_models:
   "Qwen2.5-1.5B-Instruct": "Qwen/Qwen2.5-1.5B-Instruct"
